less/jaguar.less
@import "common.less";

// normalize
html, body {
    font: 1em "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
    background-color: #fff;
}
ul, ol {
    margin: 0;
    padding: 0;
}
li {
    list-style-type: none;
}

#wrap {
    position: relative;
}

@import "navigation.less";
@import "main.less";
@import "footer.less";

